src/test/resources/cocos/invalid/imports/elementNameAlreadyExists1/Import Vehicle.sysml
/* (c) https://github.com/MontiCore/monticore */
package 'Import Vehicle'{
  import 'Symbol Definition'::Vehicle as AlreadyInScope;
  block AlreadyInScope;
}
